# idcfcli

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  azure-pipelines.yml
.github/workflows/: build.yml  release.yml
src/: compute.rs  keyvalue.rs  main.rs
