[package]
name = "idcfcli"
version = "0.3.0"
authors = ["itn3000 <itn3000@gmail.com>"]
edition = "2018"

[dependencies]
# reqwest = "0.9"
clap = "2.33"
rust-crypto = "0.2"
percent-encoding = "2.2"
serde = "1.0"
serde_json = "1.0"
base64 = "0.10"
url = "2.3"
log = "0.4"
env_logger = "0.9"
xml-rs = "0.8"
futures = "0.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [ "rustls-tls" ]

[dependencies.tokio]
version = "1.21"
# default-features = false
features = [ "rt", "macros", "rt-multi-thread" ]